# clouduct

./: .gitignore  Makefile  README.md  clouduct-templates.yaml  clouduct-templates2.yaml  compdummy.complete  pyproject.toml  setup.py
clouduct/: __init__.py  clouduct.py  tui.py
clouduct-bin/: clouduct-tf  initial-commit.sh
clouduct/console/: clouductbootstrap.py
clouduct/cookicutter/: project-to-cookiecutter.py
clouduct/reseed/: reseed.py
completion/: bash.complete  zsh.complete
